--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -8,13 +8,16 @@ on:
 
 # Allow one concurrent deployment
 concurrency:
-  group: 'pages'
   cancel-in-progress: true
 
 jobs:
   # Single deploy job since we're just deploying
   deploy:
     runs-on: ubuntu-latest
+    permissions:
+      # Give the default GITHUB_TOKEN write permission to commit and push the
+      # added or changed files to the repository.
+      contents: write
     steps:
       - name: Checkout
         uses: actions/checkout@v5
